Fixed img hrefs and replaced text-wrap for safari

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -117,7 +117,7 @@ hr {
 
 #homepage-nav-link {
   border-right: 4px solid black;
-  text-wrap: nowrap;
+  white-space: nowrap;
 }
 
 #linkedin-link {
